# flowrs-build

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  config.local.json  docker-compose.yaml  docker.env  initial-setup.bat  initial-setup.sh  new project.http  rest.http  test.bat  test.ps1  test.sh  test2.bat  test_mac.sh
flow-examples/: coding_assistant.http
flow-packages/: flowrs-ai.json  flowrs-img.json  flowrs-std.json  flowrs.json
flow-projects/MyFlowProject/: Cargo.toml  flow-project.json
flow-projects/MyFlowProject/src/: flow.rs
flow-projects/flow_project_1/: flow-project.json
flow-projects2/flow_project_84/: Cargo.toml  flow-project.json  index.html
flow-projects2/flow_project_84/src/: lib.rs
flowrs-build-designer/: .env.example  .rete-patch  Dockerfile  Dockerfile-prod  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
flowrs-build-designer/assets/scss/: main.scss
flowrs-build-designer/components/: AlertComponent.vue  AppBar.vue  ControlPanel.vue  CustomDropdownControl.vue  ErrorPopup.vue  JsonEditorVue.client.vue  LogPanel.vue  MetricPanel.vue  MetricPanelPlaceholder.vue  Navbar.vue  PackageCard.vue  PackageDrawer.vue  PackageList.vue  PackageSelect.vue  ProjectActionPane.vue  ProjectList.vue  Rete.vue  Terminal.vue
flowrs-build-designer/customization/: custom-background.ts
flowrs-build-designer/layouts/: default.vue
flowrs-build-designer/pages/: CompileAndRun.vue  CompileRunAndMetrics.vue  FlowBuilder.vue  FlowEditor.vue  PackageSelect.vue  ProjectSelect.vue  index.vue
flowrs-build-designer/plugins/: api.ts  jsonEditor.ts  vuetify.ts
flowrs-build-designer/repository/: api_sample_data.ts  factory.ts
flowrs-build-designer/repository/modules/: packages.ts  processes.ts  projects.ts
flowrs-build-designer/rete/: default.ts  example.ts  flowbuilder.ts  index.ts
flowrs-build-designer/rete/flowrs/: contextCreator.ts  editor.ts  flowrsNode.ts
flowrs-build-designer/store/: eventStore.ts  packageStore.ts  projectStore.ts
live-analytics-server/grafana-provisioning/dashboards/: Home.json
live-analytics-server/grafana-provisioning/dashboards/Presets/: flowrs-prometheus.json
src/: config.rs  flow_model.rs  flow_project.rs  lib.rs  package.rs  package_manager.rs  version.rs
src/api/: rest_handlers.rs
src/service/: config.rs  server.rs
