[package]
name = "flowrs-build"
version = "0.1.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "Build tools for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-build"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-wasm"
keywords = ["flow", "fbp", "wasm"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "rlib"]

[[bin]]
name = "service_main"
path = "src/bin/service_main.rs"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"

tracing = "0.1"
tracing-subscriber = "0.2"

quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"

anyhow = "1.0"
tokio-util = {version = "0.7.8", features = ["io"] }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.37"
