[package]
name = "flowrs-build"
version = "0.1.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "Build tools for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-build"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-wasm"
keywords = ["flow", "fbp", "wasm"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "rlib"]

[[bin]]
name = "service_main"
path = "src/bin/service_main.rs"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tower = "0.4"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"

quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0.39"
flowrs = { git = "https://github.com/flow-rs/flowrs", branch = "feature-project7"}


anyhow = "1.0"
tokio-util = {version = "0.7.8", features = ["io"] }
mime_guess = "2.0.4"
handlebars = "4.4.0"
libloading = "0.8.1"
clap = { version = "4.4.4", features = ["derive"] }
ctrlc = "3.4.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.37"
