[package]
name = "flow_project_84" 
version = "1.0.0"
edition = "2021"

[dependencies]
flowrs = {git = "https://github.com/flow-rs/flowrs", branch = "dev"}
flowrs-std = {git = "https://github.com/flow-rs/flowrs-std", branch = "feature-project1"}
wasm-bindgen = "0.2.87"
serde_json = "1.0.105"

[lib]
crate-type = ["cdylib"]